--- a/style.css
+++ b/style.css
@@ -22,3 +22,21 @@
     position:relative;
     top:1px;
 }
+.split {
+    width: 50%;
+    position: absolute;
+    z-index: 1;
+    top: 50;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+    left: 0;
+}
+
+/* Control the right side */
+.right {
+    right: 0;
+}
