--- a/hack.css
+++ b/hack.css
@@ -10,7 +10,6 @@ body {
 }
 body::after {
   content: "";
-  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
@@ -34,6 +33,25 @@ a:link {
 
 a:visited {
   color: white;
+}
+
+.split {
+  width: 50%;
+  position: absolute;
+  z-index: 1;
+  top: 50;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
 }
 
 /*# sourceMappingURL=hack.css.map */
