--- a/hack.css
+++ b/hack.css
@@ -18,6 +18,10 @@ body::after {
   pointer-events: none;
 }
 
+div {
+  padding: 2rem;
+}
+
 ::selection {
   background: #0080FF;
   text-shadow: none;
