--- a/hack.scss
+++ b/hack.scss
@@ -25,6 +25,11 @@ body {
     pointer-events: none;
   }
 }
+
+div {
+  padding: 2rem;
+}
+
 ::selection {
   background: #0080FF;
   text-shadow: none;
